--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,8 +1,35 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+
+<GridPane alignment="TOP_CENTER" maxHeight="400.0" maxWidth="400.0" minHeight="189.0" minWidth="292.0" prefHeight="189.0" prefWidth="292.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    </rowConstraints>
+    <children>
+        <AnchorPane maxHeight="400.0" maxWidth="400.0" minHeight="192.0" minWidth="293.0" prefHeight="192.0" prefWidth="293.0">
+            <children>
+                <Label layoutX="129.0" layoutY="11.0" text="Логин" />
+                <Label layoutX="125.0" layoutY="70.0" text="Пароль" />
+                <TextField fx:id="login" layoutX="72.0" layoutY="35.0" />
+                <Button fx:id="Enter" layoutX="72.0" layoutY="141.0" mnemonicParsing="false" text="Войти" />
+                <Button fx:id="remember" layoutX="146.0" layoutY="141.0" mnemonicParsing="false" text="Вспомнить" />
+                <PasswordField fx:id="pwd" layoutX="72.0" layoutY="96.0" />
+            </children>
+        </AnchorPane>
+    </children>
+    <effect>
+        <Blend />
+    </effect>
 </GridPane>
