--- a/src/sample/fxml/sample.fxml
+++ b/src/sample/fxml/sample.fxml
@@ -4,32 +4,39 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.effect.Glow?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<GridPane alignment="TOP_CENTER" maxHeight="400.0" maxWidth="400.0" minHeight="189.0" minWidth="292.0" prefHeight="189.0" prefWidth="292.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller">
-    <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    </rowConstraints>
-    <children>
-        <AnchorPane maxHeight="400.0" maxWidth="400.0" minHeight="192.0" minWidth="293.0" prefHeight="192.0" prefWidth="293.0">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="281.0" prefWidth="352.0" style="-fx-background-color: #757575;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller">
+   <children>
+      <AnchorPane layoutX="4.0" layoutY="61.0" prefHeight="215.0" prefWidth="345.0" style="-fx-background-color: #BEEDB0;" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="60.0" />
+        <AnchorPane layoutX="14.0" layoutY="188.0" prefHeight="198.0" prefWidth="324.0" style="-fx-background-color: #E6E6E6;" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
             <children>
-                <Label layoutX="129.0" layoutY="11.0" text="Логин" />
-                <Label layoutX="125.0" layoutY="70.0" text="Пароль" />
-                <TextField fx:id="Login" alignment="CENTER" layoutX="72.0" layoutY="35.0" onAction="#ClickEnterLogin" promptText="Enter your login" />
-                <PasswordField fx:id="pwd" alignment="CENTER" layoutX="72.0" layoutY="96.0" onAction="#ClickEnter" promptText="Enter your password" />
-                <Button fx:id="Enter" layoutX="72.0" layoutY="141.0" mnemonicParsing="false" onAction="#Click" text="Войти" />
-                <Button fx:id="remember" layoutX="146.0" layoutY="141.0" mnemonicParsing="false" text="Вспомнить" />
+                <Button fx:id="escape" layoutX="112.0" layoutY="159.0" mnemonicParsing="false" onAction="#escapeButton" prefHeight="25.0" prefWidth="100.0" text="Отмена" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="112.0" AnchorPane.rightAnchor="112.0" />
+                <TextField fx:id="login" alignment="CENTER" layoutX="62.0" layoutY="23.0" maxHeight="25.0" maxWidth="200.0" minHeight="2.0" minWidth="200.0" onAction="#ClickEnterLogin" prefHeight="25.0" prefWidth="200.0" promptText="Enter your login" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="62.0" AnchorPane.rightAnchor="62.0" />
+                <PasswordField fx:id="password" alignment="CENTER" layoutX="63.0" layoutY="145.0" maxHeight="25.0" maxWidth="200.0" minHeight="25.0" minWidth="200.0" onAction="#ClickEnter" prefHeight="25.0" prefWidth="200.0" promptText="Enter your password" AnchorPane.bottomAnchor="102.0" AnchorPane.leftAnchor="62.0" AnchorPane.rightAnchor="62.0" />
+                <Button fx:id="enter" layoutX="72.0" layoutY="141.0" mnemonicParsing="false" onAction="#Click" prefHeight="20.0" prefWidth="100.0" text="Вход" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="112.0" AnchorPane.rightAnchor="112.0" />
             </children>
         </AnchorPane>
-    </children>
-    <effect>
-        <Blend />
-    </effect>
-</GridPane>
+      <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="57.0" prefWidth="352.0">
+         <children>
+            <Label alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="81.0" layoutY="10.0" prefHeight="38.0" prefWidth="100.0" text="Online" textFill="#08b5ff" AnchorPane.bottomAnchor="9.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="172.0" AnchorPane.topAnchor="10.0">
+               <font>
+                  <Font name="Tahoma" size="30.0" />
+               </font>
+               <effect>
+                  <Glow />
+               </effect>
+            </Label>
+            <Label alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="171.0" layoutY="10.0" prefHeight="38.0" prefWidth="100.0" text="Market" textFill="#aaf095">
+               <font>
+                  <Font name="Tahoma" size="30.0" />
+               </font>
+            </Label>
+            <Label alignment="TOP_CENTER" layoutX="252.0" layoutY="40.0" prefHeight="17.0" prefWidth="56.0" text="admin" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="252.0" AnchorPane.rightAnchor="44.0" AnchorPane.topAnchor="40.0" />
+         </children>
+      </AnchorPane>
+   </children>
+</AnchorPane>
