--- a/src/sample/fxml/LoginFormDB.fxml
+++ b/src/sample/fxml/LoginFormDB.fxml
@@ -8,16 +8,15 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="281.0" prefWidth="352.0" style="-fx-background-color: #757575;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller">
     <children>
         <AnchorPane layoutX="4.0" layoutY="61.0" prefHeight="215.0" prefWidth="345.0" style="-fx-background-color: #BEEDB0;" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="60.0" />
-        <AnchorPane layoutX="14.0" layoutY="188.0" prefHeight="198.0" prefWidth="324.0" style="-fx-background-color: #E6E6E6;" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
-            <children>
-                <Button fx:id="escape" layoutX="112.0" layoutY="159.0" mnemonicParsing="false" onAction="#escapeButton" prefHeight="25.0" prefWidth="100.0" text="Отмена" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="112.0" AnchorPane.rightAnchor="112.0" />
+        <AnchorPane layoutX="14.0" layoutY="188.0" prefHeight="198.0"  prefWidth="324.0" style="-fx-background-color: #E6E6E6;" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0">
+            <children >
+                <Button fx:id="escape"  layoutX="112.0" layoutY="159.0" mnemonicParsing="false" onAction="#escapeButton" prefHeight="25.0" prefWidth="100.0" text="Отмена" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="112.0" AnchorPane.rightAnchor="112.0" />
                 <TextField fx:id="login" alignment="CENTER" layoutX="62.0" layoutY="23.0" maxHeight="25.0" maxWidth="200.0" minHeight="2.0" minWidth="200.0" onAction="#ClickEnterLogin" prefHeight="25.0" prefWidth="200.0" promptText="Enter your login" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="62.0" AnchorPane.rightAnchor="62.0" />
                 <PasswordField fx:id="password" alignment="CENTER" layoutX="63.0" layoutY="145.0" maxHeight="25.0" maxWidth="200.0" minHeight="25.0" minWidth="200.0" onAction="#ClickEnter" prefHeight="25.0" prefWidth="200.0" promptText="Enter your password" AnchorPane.bottomAnchor="102.0" AnchorPane.leftAnchor="62.0" AnchorPane.rightAnchor="62.0" />
-                <Button fx:id="enter" layoutX="72.0" layoutY="141.0" mnemonicParsing="false" onAction="#Click" prefHeight="20.0" prefWidth="100.0" text="Вход" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="112.0" AnchorPane.rightAnchor="112.0" />
+                <Button fx:id="enter" layoutX="72.0" layoutY="141.0" styleClass="red" mnemonicParsing="false" onAction="#Click" prefHeight="20.0" prefWidth="100.0" text="Вход" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="112.0" AnchorPane.rightAnchor="112.0" />
             </children>
         </AnchorPane>
         <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="57.0" prefWidth="352.0">
