--- a/src/sample/fxml/AdminProdDB.fxml
+++ b/src/sample/fxml/AdminProdDB.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="700.0" style="-fx-background-color: #757575;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.EditController">
+<AnchorPane fx:id="AnchornAdmin" prefHeight="600.0" prefWidth="700.0" style="-fx-background-color: #757575;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.EditController">
     <children>
         <TextField fx:id="searchField" layoutX="131.0" layoutY="555.0" prefHeight="25.0" prefWidth="214.0" promptText="Enter text" AnchorPane.bottomAnchor="20.0" />
         <Button fx:id="searchButton" layoutX="356.0" layoutY="555.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="98.0" text="Search" AnchorPane.bottomAnchor="20.0" />
@@ -35,7 +35,7 @@
         </TableView>
       <AnchorPane layoutY="77.0" prefHeight="467.0" prefWidth="121.0" AnchorPane.leftAnchor="5.0">
          <children>
-              <Button fx:id="addButton" layoutX="21.0" layoutY="33.0" mnemonicParsing="false" onAction="#select" prefHeight="40.0" prefWidth="80.0" text="+Add" AnchorPane.leftAnchor="21.0" AnchorPane.topAnchor="33.0" />
+              <Button fx:id="addButton" layoutX="21.0" layoutY="33.0" mnemonicParsing="false" onAction="#AddButton" prefHeight="40.0" prefWidth="80.0" text="+Add" AnchorPane.leftAnchor="21.0" AnchorPane.topAnchor="33.0" />
               <Button fx:id="deleteButton" layoutX="20.0" layoutY="91.0" mnemonicParsing="false" onAction="#del" prefHeight="40.0" prefWidth="80.0" text="-Delete" visible="false" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="99.0" />
               <Button fx:id="editButton" layoutX="20.0" layoutY="150.0" mnemonicParsing="false" onAction="#edit" prefHeight="40.0" prefWidth="80.0" text="Edit" visible="false" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="166.0" />
          </children>
