--- a/src/sample/fxml/EditWindow.fxml
+++ b/src/sample/fxml/EditWindow.fxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane fx:id="AddWindow" prefHeight="277.0" prefWidth="434.0" style="-fx-background-color: #757575;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.EditWindowController">
-   <children>
-      <VBox layoutY="-6.0" prefHeight="285.0" prefWidth="455.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-   </children>
+<AnchorPane fx:id="AddWindow" prefHeight="277.0" prefWidth="434.0" style="-fx-background-color: #C9C9C9;"
+            xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="sample.Controllers.EditWindowController">
+    <children>
+        <VBox fx:id="vbox1" layoutX="46.0" layoutY="36.0" prefHeight="207.0" prefWidth="334.0"
+              AnchorPane.bottomAnchor="34.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0"
+              AnchorPane.topAnchor="36.0"/>
+        <Button fx:id="buttonOK" layoutX="170.0" layoutY="6.0" mnemonicParsing="false" onAction="#getResultFromWindow"
+                text="Подтвердить" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="170.0"/>
+    </children>
 </AnchorPane>
