--- a/src/sample/fxml/AdminProdDB.fxml
+++ b/src/sample/fxml/AdminProdDB.fxml
@@ -44,18 +44,17 @@
     <AnchorPane layoutY="77.0" prefHeight="467.0" prefWidth="121.0" AnchorPane.leftAnchor="5.0">
         <children>
             <Button fx:id="addButton" layoutX="21.0" layoutY="33.0" mnemonicParsing="false"
-                    onAction="#ClickedButtonAddEdit" prefHeight="40.0" prefWidth="80.0" text="+Add"
+                    onAction="#ClickedButtonAddorEdit" prefHeight="40.0" prefWidth="80.0" text="+Add"
                     AnchorPane.leftAnchor="21.0" AnchorPane.topAnchor="33.0"/>
             <Button fx:id="deleteButton" layoutX="20.0" layoutY="91.0" mnemonicParsing="false" onAction="#DelButton"
                     prefHeight="40.0" prefWidth="80.0" text="-Delete" visible="false" AnchorPane.leftAnchor="20.0"
                     AnchorPane.topAnchor="99.0"/>
             <Button fx:id="editButton" layoutX="20.0" layoutY="150.0" mnemonicParsing="false"
-                    onAction="#ClickedButtonAddEdit" prefHeight="40.0" prefWidth="80.0" text="Edit" visible="false"
+                    onAction="#ClickedButtonAddorEdit" prefHeight="40.0" prefWidth="80.0" text="Edit" visible="false"
                     AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="166.0"/>
         </children>
     </AnchorPane>
     <AnchorPane layoutX="423.0" layoutY="39.0" prefHeight="32.0" prefWidth="227.0" AnchorPane.rightAnchor="28.0">
-        <children>
 
             <Button fx:id="productButton" mnemonicParsing="false" onAction="#select" text="Product"
                     AnchorPane.rightAnchor="160.0"/>
@@ -63,8 +62,7 @@
                     text="User" AnchorPane.rightAnchor="90.0"/>
             <Button fx:id="orderButton" mnemonicParsing="false" onAction="#select" prefHeight="25.0" prefWidth="58.0"
                     text="Order" AnchorPane.rightAnchor="20.0"/>
-        </children>
-    </AnchorPane>
+        </AnchorPane>
     <ComboBox fx:id="combobox" focusTraversable="false" layoutX="131.0" layoutY="39.0" onAction="#comboBoxSelected"
               prefHeight="25.0" prefWidth="227.0" visible="false"/>
     <Label fx:id="categories" layoutX="365.0" layoutY="39.0" prefHeight="25.0" prefWidth="68.0" text="Categories"
