--- a/src/sample/fxml/AdminProdDB.fxml
+++ b/src/sample/fxml/AdminProdDB.fxml
@@ -11,64 +11,49 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="AnchornAdmin" prefHeight="600.0" prefWidth="700.0" style="-fx-background-color: #757575;"
-            xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="sample.Controllers.EditController">
-    <TextField fx:id="searchField" layoutX="131.0" layoutY="555.0" prefHeight="25.0" prefWidth="214.0"
-               promptText="Enter text" AnchorPane.bottomAnchor="20.0"/>
-    <Button fx:id="searchButton" layoutX="356.0" layoutY="555.0" mnemonicParsing="false" prefHeight="25.0"
-            prefWidth="98.0" text="Search" AnchorPane.bottomAnchor="20.0"/>
-    <TableView fx:id="tableView" layoutX="131.0" layoutY="70.0" prefHeight="458.0" prefWidth="547.0"
-               AnchorPane.bottomAnchor="62.0" AnchorPane.leftAnchor="131.0" AnchorPane.rightAnchor="22.0"
-               AnchorPane.topAnchor="80.0">
+<AnchorPane fx:id="AnchornAdmin" prefHeight="600.0" prefWidth="700.0" style="-fx-background-color: #757575;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.EditController">
+    <TextField fx:id="searchField" focusTraversable="false" layoutX="131.0" layoutY="555.0" prefHeight="25.0" prefWidth="214.0" promptText="Enter text" AnchorPane.bottomAnchor="20.0" />
+    <Button fx:id="searchButton" layoutX="356.0" layoutY="555.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="98.0" text="Search" AnchorPane.bottomAnchor="20.0" />
+    <TableView fx:id="tableView" layoutX="131.0" layoutY="70.0" prefHeight="458.0" prefWidth="547.0" AnchorPane.bottomAnchor="62.0" AnchorPane.leftAnchor="131.0" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="80.0">
         <placeholder>
             <Label alignment="CENTER" text="Online Market" textAlignment="CENTER" textFill="#c0c3be">
                 <font>
-                    <Font name="Tahoma" size="36.0"/>
+                    <Font name="Tahoma" size="36.0" />
                 </font>
                 <effect>
                     <Lighting diffuseConstant="2.0" specularConstant="2.0" specularExponent="40.0" surfaceScale="0.22">
                         <bumpInput>
-                            <ColorInput/>
+                            <ColorInput />
                         </bumpInput>
                         <light>
                         </light>
                     </Lighting>
                 </effect>
                 <opaqueInsets>
-                    <Insets/>
+                    <Insets />
                 </opaqueInsets>
             </Label>
         </placeholder>
     </TableView>
     <AnchorPane layoutY="77.0" prefHeight="467.0" prefWidth="121.0" AnchorPane.leftAnchor="5.0">
         <children>
-            <Button fx:id="addButton" layoutX="21.0" layoutY="33.0" mnemonicParsing="false"
-                    onAction="#ClickedButtonAddorEdit" prefHeight="40.0" prefWidth="80.0" text="+Add"
-                    AnchorPane.leftAnchor="21.0" AnchorPane.topAnchor="33.0"/>
-            <Button fx:id="deleteButton" layoutX="20.0" layoutY="91.0" mnemonicParsing="false" onAction="#DelButton"
-                    prefHeight="40.0" prefWidth="80.0" text="-Delete" visible="false" AnchorPane.leftAnchor="20.0"
-                    AnchorPane.topAnchor="99.0"/>
-            <Button fx:id="editButton" layoutX="20.0" layoutY="150.0" mnemonicParsing="false"
-                    onAction="#ClickedButtonAddorEdit" prefHeight="40.0" prefWidth="80.0" text="Edit" visible="false"
-                    AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="166.0"/>
+            <Button fx:id="addButton" layoutX="21.0" layoutY="33.0" mnemonicParsing="false" onAction="#ClickedButtonAddorEdit" prefHeight="40.0" prefWidth="80.0" text="+Add" AnchorPane.leftAnchor="21.0" AnchorPane.topAnchor="33.0" />
+            <Button fx:id="deleteButton" layoutX="20.0" layoutY="91.0" mnemonicParsing="false" onAction="#DelButton" prefHeight="40.0" prefWidth="80.0" text="-Delete" visible="false" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="99.0" />
+            <Button fx:id="editButton" layoutX="20.0" layoutY="150.0" mnemonicParsing="false" onAction="#ClickedButtonAddorEdit" prefHeight="40.0" prefWidth="80.0" text="Edit" visible="false" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="166.0" />
         </children>
     </AnchorPane>
     <AnchorPane layoutX="423.0" layoutY="39.0" prefHeight="32.0" prefWidth="227.0" AnchorPane.rightAnchor="28.0">
+        <children>
 
-            <Button fx:id="productButton" mnemonicParsing="false" onAction="#select" text="Product"
-                    AnchorPane.rightAnchor="160.0"/>
-            <Button fx:id="userButton" mnemonicParsing="false" onAction="#select" prefHeight="25.0" prefWidth="58.0"
-                    text="User" AnchorPane.rightAnchor="90.0"/>
-            <Button fx:id="orderButton" mnemonicParsing="false" onAction="#select" prefHeight="25.0" prefWidth="58.0"
-                    text="Order" AnchorPane.rightAnchor="20.0"/>
-        </AnchorPane>
-    <ComboBox fx:id="combobox" focusTraversable="false" layoutX="131.0" layoutY="39.0" onAction="#comboBoxSelected"
-              prefHeight="25.0" prefWidth="227.0" visible="false"/>
-    <Label fx:id="categories" layoutX="365.0" layoutY="39.0" prefHeight="25.0" prefWidth="68.0" text="Categories"
-           textFill="WHITE" visible="false">
+            <Button fx:id="productButton" mnemonicParsing="false" onAction="#select" text="Product" AnchorPane.rightAnchor="160.0" />
+            <Button fx:id="userButton" mnemonicParsing="false" onAction="#select" prefHeight="25.0" prefWidth="58.0" text="User" AnchorPane.rightAnchor="90.0" />
+            <Button fx:id="orderButton" mnemonicParsing="false" onAction="#select" prefHeight="25.0" prefWidth="58.0" text="Order" AnchorPane.rightAnchor="20.0" />
+        </children>
+    </AnchorPane>
+    <ComboBox fx:id="combobox" focusTraversable="false" layoutX="131.0" layoutY="39.0" onAction="#comboBoxSelected" prefHeight="25.0" prefWidth="227.0" visible="false" />
+    <Label fx:id="categories" layoutX="365.0" layoutY="39.0" prefHeight="25.0" prefWidth="68.0" text="Categories" textFill="WHITE" visible="false">
         <font>
-            <Font name="System Bold Italic" size="12.0"/>
+            <Font name="System Bold Italic" size="12.0" />
         </font>
     </Label>
 </AnchorPane>
